@@ -82,8 +82,14 @@ my $rna_gen;
     qq{--qc_out $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/qc --tag_index 3 }.
     q{'};
 
-   $args->{'4000'} = qq{bam_alignment.pl --id_run 12597 --position 4 --tag_index 0 --input $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/lane4/12597_4#0.bam --output_prefix $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/12597_4#0 --is_paired_read};
-     
+  $args->{'4000'} = qq{bash -c '\ mkdir -p $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/tmp_\$LSB_JOBID/12597_4#0 ; cd $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/tmp_\$LSB_JOBID/12597_4#0 && vtfp.pl -s -keys samtools_executable -vals samtools1 -keys cfgdatadir -vals \$(dirname \$(readlink -f \$(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `perl -e '"'"'print scalar(()=\$ENV{LSB_BIND_CPU_LIST}=~/\\d+/smg) || \$ENV{LSB_MCPU_HOSTS}=~/(\\d+)\\s*\\Z/sm;'"'"'` -keys indatadir -vals $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/lane4 -keys outdatadir -vals $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4 -keys af_metrics -vals 12597_4#0.bam_alignment_filter_metrics.json -keys rpt -vals 12597_4#0 -keys reference_dict -vals $dir/references/Mus_musculus/NCBIm37/all/picard/mm_ref_NCBI37_1.fasta.dict -keys reference_genome_fasta -vals $dir/references/Mus_musculus/NCBIm37/all/fasta/mm_ref_NCBI37_1.fasta -keys phix_reference_genome_fasta -vals $phix_ref -keys alignment_filter_jar -vals $odir/t/bin/software/solexa/bin/aligners/illumina2bam/Illumina2bam-tools-1.00/AlignmentFilter.jar -keys alignment_reference_genome -vals 0 -keys bwa_executable -vals bwa0_6 -keys alignment_method -vals bwa_aln \$(dirname \$(dirname \$(readlink -f \$(which vtfp.pl))))/data/vtlib/alignment_wtsi_stage2_template.json > run_12597_4#0.json && viv.pl -s -x -v 3 -o viv_12597_4#0.log run_12597_4#0.json  } .
+  q{&& perl -e '"'"'use strict; use autodie; use npg_qc::autoqc::results::bam_flagstats; my$o=npg_qc::autoqc::results::bam_flagstats->new(id_run=>12597,position=>4,sequence_file=>$ARGV[0],tag_index=>0); $o->execute(); $o->store($ARGV[-1]) '"'"' } .
+  qq{$dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/12597_4#0.cram $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/qc && } .
+  q{perl -e '"'"'use strict; use autodie; use npg_qc::autoqc::results::bam_flagstats; my$o=npg_qc::autoqc::results::bam_flagstats->new(id_run=>12597,position=>4,sequence_file=>$ARGV[0],subset=>q(phix),tag_index=>0); $o->execute(); $o->store($ARGV[-1]) '"'"' } .
+  qq{$dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/12597_4#0_phix.cram $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/qc &&   } .
+  q{qc --check alignment_filter_metrics --qc_in $PWD --id_run 12597 --position 4 } .
+  qq{--qc_out $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/qc --tag_index 0 }.
+    q{'};
   
  lives_ok {$rna_gen->_generate_command_arguments([4])}
      'no error generating command arguments';
@@ -110,14 +116,27 @@ ok (-e $fname, 'file exists');
 
 my @lines = slurp($fname);
 
+my $xjson = qq({"4003":"bash -c ' mkdir -p $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/tmp_\$LSB_JOBID/12597_4#3 ; cd $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/tmp_\$LSB_JOBID/12597_4#3 && vtfp.pl -s -keys samtools_executable -vals samtools1 -keys cfgdatadir -vals \$(dirname \$(readlink -f \$(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `perl -e '\\"'\\"'print scalar(()=\$ENV{LSB_BIND_CPU_LIST}=~/\\\\d+/smg) || \$ENV{LSB_MCPU_HOSTS}=~/(\\\\d+)\\\\s*\\\\Z/sm;'\\"'\\"'` -keys indatadir -vals $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/lane4 -keys outdatadir -vals $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4 -keys af_metrics -vals 12597_4#3.bam_alignment_filter_metrics.json -keys rpt -vals 12597_4#3 -keys reference_dict -vals $dir/references/Mus_musculus/NCBIm37/all/picard/mm_ref_NCBI37_1.fasta.dict -keys reference_genome_fasta -vals $dir/references/Mus_musculus/NCBIm37/all/fasta/mm_ref_NCBI37_1.fasta -keys phix_reference_genome_fasta -vals $phix_ref -keys alignment_filter_jar -vals $odir/t/bin/software/solexa/bin/aligners/illumina2bam/Illumina2bam-tools-1.00/AlignmentFilter.jar -keys alignment_reference_genome -vals $dir/references/Mus_musculus/NCBIm37/all/bowtie2/mm_ref_NCBI37_1.fasta -keys library_type -vals fr-firststrand -keys transcriptome_val -vals $dir/transcriptomes/Mus_musculus/ensembl_67_transcriptome/NCBIm37/tophat2/NCBIm37.known -keys alignment_method -vals tophat2 \$(dirname \$(dirname \$(readlink -f \$(which vtfp.pl))))/data/vtlib/alignment_wtsi_stage2_template.json > run_12597_4#3.json && viv.pl -s -x -v 3 -o viv_12597_4#3.log run_12597_4#3.json  ) .
+  q(&& perl -e '\"'\"'use strict; use autodie; use npg_qc::autoqc::results::bam_flagstats; my$o=npg_qc::autoqc::results::bam_flagstats->new(id_run=>12597,position=>4,sequence_file=>$ARGV[0],tag_index=>3); $o->execute(); $o->store($ARGV[-1]) '\"'\"' ) .
+  qq($dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/12597_4#3.cram $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/qc && ) .
+  q(perl -e '\"'\"'use strict; use autodie; use npg_qc::autoqc::results::bam_flagstats; my$o=npg_qc::autoqc::results::bam_flagstats->new(id_run=>12597,position=>4,sequence_file=>$ARGV[0],subset=>q(phix),tag_index=>3); $o->execute(); $o->store($ARGV[-1]) '\"'\"' ) .
+  qq($dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/12597_4#3_phix.cram $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/qc ) .
+  q{&&   qc --check alignment_filter_metrics --qc_in $PWD --id_run 12597 --position 4 } .
+  qq{--qc_out $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/qc --tag_index 3 }.
+  qq('","4000":"bam_alignment.pl --id_run 12597 --position 4 --tag_index 0 --input $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/lane4/12597_4#0.bam --output_prefix $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/12597_4#0 --is_paired_read"});
+
 my $json = qq({"4003":"bash -c ' mkdir -p $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/tmp_\$LSB_JOBID/12597_4#3 ; cd $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/tmp_\$LSB_JOBID/12597_4#3 && vtfp.pl -s -keys samtools_executable -vals samtools1 -keys cfgdatadir -vals \$(dirname \$(readlink -f \$(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `perl -e '\\"'\\"'print scalar(()=\$ENV{LSB_BIND_CPU_LIST}=~/\\\\d+/smg) || \$ENV{LSB_MCPU_HOSTS}=~/(\\\\d+)\\\\s*\\\\Z/sm;'\\"'\\"'` -keys indatadir -vals $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/lane4 -keys outdatadir -vals $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4 -keys af_metrics -vals 12597_4#3.bam_alignment_filter_metrics.json -keys rpt -vals 12597_4#3 -keys reference_dict -vals $dir/references/Mus_musculus/NCBIm37/all/picard/mm_ref_NCBI37_1.fasta.dict -keys reference_genome_fasta -vals $dir/references/Mus_musculus/NCBIm37/all/fasta/mm_ref_NCBI37_1.fasta -keys phix_reference_genome_fasta -vals $phix_ref -keys alignment_filter_jar -vals $odir/t/bin/software/solexa/bin/aligners/illumina2bam/Illumina2bam-tools-1.00/AlignmentFilter.jar -keys alignment_reference_genome -vals $dir/references/Mus_musculus/NCBIm37/all/bowtie2/mm_ref_NCBI37_1.fasta -keys library_type -vals fr-firststrand -keys transcriptome_val -vals $dir/transcriptomes/Mus_musculus/ensembl_67_transcriptome/NCBIm37/tophat2/NCBIm37.known -keys alignment_method -vals tophat2 \$(dirname \$(dirname \$(readlink -f \$(which vtfp.pl))))/data/vtlib/alignment_wtsi_stage2_template.json > run_12597_4#3.json && viv.pl -s -x -v 3 -o viv_12597_4#3.log run_12597_4#3.json  ) .
   q(&& perl -e '\"'\"'use strict; use autodie; use npg_qc::autoqc::results::bam_flagstats; my$o=npg_qc::autoqc::results::bam_flagstats->new(id_run=>12597,position=>4,sequence_file=>$ARGV[0],tag_index=>3); $o->execute(); $o->store($ARGV[-1]) '\"'\"' ) .
   qq($dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/12597_4#3.cram $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/qc && ) .
   q(perl -e '\"'\"'use strict; use autodie; use npg_qc::autoqc::results::bam_flagstats; my$o=npg_qc::autoqc::results::bam_flagstats->new(id_run=>12597,position=>4,sequence_file=>$ARGV[0],subset=>q(phix),tag_index=>3); $o->execute(); $o->store($ARGV[-1]) '\"'\"' ) .
   qq($dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/12597_4#3_phix.cram $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/qc ) .
-    q{&&   qc --check alignment_filter_metrics --qc_in $PWD --id_run 12597 --position 4 } .
-    qq{--qc_out $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/qc --tag_index 3 }.
-  qq('","4000":"bam_alignment.pl --id_run 12597 --position 4 --tag_index 0 --input $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/lane4/12597_4#0.bam --output_prefix $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/12597_4#0 --is_paired_read"});
+  q(&&   qc --check alignment_filter_metrics --qc_in $PWD --id_run 12597 --position 4 ) .
+  qq(--qc_out $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/qc --tag_index 3 ) .
+  qq('","4000":"bash -c ' mkdir -p $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/tmp_\$LSB_JOBID/12597_4#0 ; cd $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/tmp_\$LSB_JOBID/12597_4#0 && vtfp.pl -s -keys samtools_executable -vals samtools1 -keys cfgdatadir -vals \$(dirname \$(readlink -f \$(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `perl -e '\\"'\\"'print scalar(()=\$ENV{LSB_BIND_CPU_LIST}=~/\\\\d+/smg) || \$ENV{LSB_MCPU_HOSTS}=~/(\\\\d+)\\\\s*\\\\Z/sm;'\\"'\\"'` -keys indatadir -vals $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/lane4 -keys outdatadir -vals $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4 -keys af_metrics -vals 12597_4#0.bam_alignment_filter_metrics.json -keys rpt -vals 12597_4#0 -keys reference_dict -vals $dir/references/Mus_musculus/NCBIm37/all/picard/mm_ref_NCBI37_1.fasta.dict -keys reference_genome_fasta -vals $dir/references/Mus_musculus/NCBIm37/all/fasta/mm_ref_NCBI37_1.fasta -keys phix_reference_genome_fasta -vals $phix_ref -keys alignment_filter_jar -vals $odir/t/bin/software/solexa/bin/aligners/illumina2bam/Illumina2bam-tools-1.00/AlignmentFilter.jar -keys alignment_reference_genome -vals 0 -keys bwa_executable -vals bwa0_6 -keys alignment_method -vals bwa_aln \$(dirname \$(dirname \$(readlink -f \$(which vtfp.pl))))/data/vtlib/alignment_wtsi_stage2_template.json > run_12597_4#0.json && viv.pl -s -x -v 3 -o viv_12597_4#0.log run_12597_4#0.json  ) .
+  q(&& perl -e '\"'\"'use strict; use autodie; use npg_qc::autoqc::results::bam_flagstats; my$o=npg_qc::autoqc::results::bam_flagstats->new(id_run=>12597,position=>4,sequence_file=>$ARGV[0],tag_index=>0); $o->execute(); $o->store($ARGV[-1]) '\"'\"' ) .
+  qq($dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/12597_4#0.cram $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/qc ) .
+  q(&& perl -e '\"'\"'use strict; use autodie; use npg_qc::autoqc::results::bam_flagstats; my$o=npg_qc::autoqc::results::bam_flagstats->new(id_run=>12597,position=>4,sequence_file=>$ARGV[0],subset=>q(phix),tag_index=>0); $o->execute(); $o->store($ARGV[-1]) '\"'\"' ) .
+  qq($dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/12597_4#0_phix.cram $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/qc &&   qc --check alignment_filter_metrics --qc_in \$PWD --id_run 12597 --position 4 --qc_out $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4/qc --tag_index 0 '"});
 
 cmp_deeply(\@lines, [$json ], 'correct json file content (for dUTP library)');
 
@@ -137,12 +156,12 @@ cmp_deeply(\@lines, [$json ], 'correct json file content (for dUTP library)');
 
 #####  non-RNASeq libraries (i.e. not Illumina cDNA protocol (unstranded) and RNA-seq dUTP (stranded))  pattern match looks for /(?:cD|R)NA/sxm
 
-  $args->{'5040'} = qq{bam_alignment.pl --spiked_phix_split --id_run 12597 --position 5 --tag_index 40 --input $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/lane5/12597_5#40.bam --output_prefix $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane5/12597_5#40 --is_paired_read};
+  $args->{'5168'} = qq{bam_alignment.pl --id_run 12597 --position 5 --tag_index 168 --input $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/lane5/12597_5#168.bam --output_prefix $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane5/12597_5#168 --is_paired_read};
  
   lives_ok {$rna_gen->_generate_command_arguments([5])}
      'no error generating command arguments for non-RNASeq lane';
 
-  is ($rna_gen->_job_args->{'5040'},$args->{'5040'},'correct non-RNASeq lane args generated');
+  is ($rna_gen->_job_args->{'5168'},$args->{'5168'},'correct non-RNASeq lane args generated');
 
 #### monoplex (non-RNA Seq)
 
